[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "squeal"
version = "0.0.1"
authors = [
  {name="Alex Dodge", email="alexdodge@gmail.com"},
]
description = "Message queues backed by an RDB"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
	"Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
keywords = ["message queue"]

[project.urls]
"Library Homepage" = "https://github.com/adodge/squeal"
"Library Bug Tracker" = "https://github.com/adodge/squeal/issues"